--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -9,3 +9,10 @@ body {
 
 a {
 }
+.album-image{
+    border: 1px solid #ccc;
+    -webkit-box-shadow:0 1px 1px rgba(0,1,1,.08);
+    -moz-box-shadow:0 1px 1px rgba(0,1,1,.08);
+    box-shadow:0 1px 1px rgba(0,1,1,.08);
+    padding: 20px;
+}
